--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "es6-promise": "^4.2.8",
+    "showdown": "^2.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
@@ -21,7 +23,11 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
+    "webpack": "^5.74.0"
   },
   "eslintConfig": {
     "root": true,
@@ -35,7 +41,15 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": ["error", {
+        "ignores": [
+          "Main",
+          "Container",
+          "Header"
+        ]
+      }]
+    }
   },
   "browserslist": [
     "> 1%",
